L3 Legal newsletter section + L4 Legal trend analysis + linked article drill-down + file logging — 1276 tests
L3: LEGAL_BRIEF newsletter section with LegalBriefSectionBuilder pulling
legal/policy articles + regulatory events into weekly newsletter drafts.

L4: Full legal trend detection pipeline — LLM-based topic extraction on
legal/policy articles + regulatory events across 30d and 31-90d windows,
momentum scoring, LITIGATION/REGULATION/POLICY categorization, optional
summaries, persistence via LegalTrendSnapshotAdapter, weekly scheduler,
tier-gated UI at /dashboard/legal/trends with Chart.js visualization.

Linked articles: trend cards now expand to show all linked articles and
regulatory events with title, source, date, and clickable links. Resolves
both news_articles and regulatory_events tables for complete coverage.

Infrastructure: file logging to logs/aihealthcare.log, run.sh startup
script that auto-sources .env for API keys.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>